Save vscode settings.json

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -69,90 +69,39 @@
     ],
     "cSpell.language": "en,en-US",
     "cSpell.userWords": [
-        "AOM's",
-        "API's",
-        "ARPU",
-        "Adelina",
-        "Amruta",
-        "Arslan",
-        "BAIR",
-        "Barreleye",
-        "Bcrypt",
-        "Bjoern's",
-        "Blazek",
-        "CAGR",
-        "CAMELCASE",
-        "CVPR",
-        "Conv",
-        "Cyprien",
-        "DARPA",
-        "DARPA’s",
-        "DASHIFIED",
-        "DIDAN",
-        "Delp",
-        "Dets",
-        "EBITDA",
-        "Fanalyze",
-        "GPU's",
-        "Gerken",
-        "Girshick",
-        "Giscard",
-        "Giscard's",
-        "Gitlab",
-        "IESDS",
-        "Jupyter",
-        "KPI's",
-        "Kaggle",
-        "Kirill",
-        "Kitware",
-        "Kubernetes",
-        "LMDB",
-        "MIZZOU",
-        "Mingyang",
-        "Murt",
-        "Nitesh",
-        "PYTHONPATH",
-        "Parallelization",
-        "Popen",
-        "Posix",
-        "Psychographics",
-        "Pylance",
-        "RESNETS",
-        "Shilliday",
-        "Slurm",
-        "Snopes",
-        "TYPECHECK",
-        "UNFOIL",
-        "VAALPP",
-        "VAALPPNOVAE",
-        "Vandelay",
-        "Vanter",
-        "WLOG",
-        "WORKDIR",
-        "XVIEWCOCO",
-        "Xview",
-        "Yaser",
-        "Yasir",
         "activelearners",
+        "Adelina",
         "algo",
         "algos",
         "altron",
+        "Amruta",
         "anns",
+        "AOM's",
         "aomsdk",
+        "API's",
         "arange",
+        "ARPU",
+        "Arslan",
         "artigraph",
         "astrazeneca",
         "astype",
         "asynch",
         "autopep",
+        "BAIR",
+        "Barreleye",
         "bbox",
         "bboxes",
+        "Bcrypt",
         "betavae",
         "biamby",
         "biontech",
+        "Bjoern's",
         "blackbox",
+        "Blazek",
         "bufsize",
         "bvaeloc",
+        "CAGR",
+        "CAMELCASE",
         "celeba",
         "chmod",
         "cifar",
@@ -165,6 +114,7 @@
         "cofounders",
         "coldstart",
         "conda",
+        "Conv",
         "convd",
         "convolutional",
         "cookiecutter",
@@ -173,6 +123,11 @@
         "ctdet",
         "cuda",
         "cudnn",
+        "CVPR",
+        "Cyprien",
+        "DARPA",
+        "DARPA’s",
+        "DASHIFIED",
         "datacenter",
         "datalake",
         "datapoints",
@@ -182,8 +137,11 @@
         "deepfake",
         "deepfakes",
         "deepfillv",
+        "Delp",
         "deque",
         "detectron",
+        "Dets",
+        "DIDAN",
         "discriminatorzdim",
         "dists",
         "dlib",
@@ -193,6 +151,7 @@
         "dotenv",
         "dtype",
         "ebextensions",
+        "EBITDA",
         "edgeconnect",
         "elasaticbeanstalk",
         "envs",
@@ -201,19 +160,27 @@
         "evigraph",
         "evigraphs",
         "facemask",
+        "Fanalyze",
         "finetune",
         "fsdet",
         "fvcore",
         "gbiamby",
         "geospatial",
+        "Gerken",
         "getenv",
         "getpgid",
+        "Girshick",
+        "Giscard",
+        "Giscard's",
+        "Gitlab",
+        "GPU's",
         "gpus",
         "graceluo",
         "groupby",
         "hackathon",
         "heatmap",
         "heatmaps",
+        "IESDS",
         "iloc",
         "imageio",
         "imgs",
@@ -232,15 +199,22 @@
         "iterrows",
         "itertools",
         "jaccard",
+        "Jupyter",
+        "Kaggle",
         "kaiming",
         "kcenter",
         "kcentergreedy",
         "kfold",
         "killpg",
+        "Kirill",
+        "Kitware",
         "kmeans",
+        "KPI's",
         "kubectl",
+        "Kubernetes",
         "laielli",
         "leaderboard",
+        "LMDB",
         "loeffler",
         "lvis",
         "manip",
@@ -249,17 +223,21 @@
         "maxormin",
         "medifor",
         "microservice",
+        "Mingyang",
         "minikube",
         "minival",
+        "MIZZOU",
         "mkdir",
         "mmbt",
         "mobilenetv",
         "moco",
         "moderna",
+        "Murt",
         "nargs",
         "ndarray",
         "nepochs",
         "neuropaths",
+        "Nitesh",
         "noqa",
         "norecursedirs",
         "numpy",
@@ -271,23 +249,29 @@
         "orgs",
         "owncloud",
         "panopticapi",
+        "Parallelization",
         "pdf's",
+        "Popen",
+        "Posix",
         "preds",
         "pretrained",
         "probs",
         "protobuf",
         "psutil",
+        "Psychographics",
         "puppeteering",
         "pyarrow",
         "pycache",
         "pycocotools",
         "pydocstyle",
         "pydoctest",
+        "Pylance",
         "pylint",
         "pylintrc",
         "pypi",
         "pytest",
         "pythonhosted",
+        "PYTHONPATH",
         "pytorch",
         "querry",
         "randn",
@@ -301,6 +285,7 @@
         "relu",
         "repurposing",
         "resnet",
+        "RESNETS",
         "rmtree",
         "roibatch",
         "rpartition",
@@ -312,7 +297,10 @@
         "semaforprogram",
         "serializable",
         "setuptools",
+        "Shilliday",
         "shutil",
+        "Slurm",
+        "Snopes",
         "sqlalchemy",
         "submodule",
         "subscore",
@@ -320,6 +308,7 @@
         "symlink",
         "termcolor",
         "timeit",
+        "timm",
         "tobytes",
         "todo's",
         "tolist",
@@ -330,21 +319,33 @@
         "trainval",
         "trainvalno",
         "twosix",
+        "TYPECHECK",
         "unchipped",
+        "UNFOIL",
         "unsequestered",
         "vaallocb",
+        "VAALPP",
+        "VAALPPNOVAE",
         "vaeloc",
         "valminusminival",
+        "Vandelay",
+        "Vanter",
         "venv",
         "vggoriginal",
         "visdrone",
         "visualnews",
         "vscode's",
         "wandb",
+        "WLOG",
+        "WORKDIR",
         "xrange",
+        "Xview",
+        "XVIEWCOCO",
         "xyxy",
         "yacs",
         "yaml's",
+        "Yaser",
+        "Yasir",
         "yolo",
         "yolov",
         "zfill"
@@ -563,5 +564,8 @@
     "workbench.iconTheme": "eq-material-theme-icons-light",
     "workbench.settings.openDefaultKeybindings": true,
     "workbench.statusBar.feedback.visible": false,
-    "workbench.tree.indent": 15
+    "workbench.tree.indent": 15,
+    "[yaml]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
