Save settings from laptop

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -69,39 +69,90 @@
     ],
     "cSpell.language": "en,en-US",
     "cSpell.userWords": [
-        "activelearners",
+        "AOM's",
+        "API's",
+        "ARPU",
         "Adelina",
+        "Amruta",
+        "Arslan",
+        "BAIR",
+        "Barreleye",
+        "Bcrypt",
+        "Bjoern's",
+        "Blazek",
+        "CAGR",
+        "CAMELCASE",
+        "CVPR",
+        "Conv",
+        "Cyprien",
+        "DARPA",
+        "DARPA’s",
+        "DASHIFIED",
+        "DIDAN",
+        "Delp",
+        "Dets",
+        "EBITDA",
+        "Fanalyze",
+        "GPU's",
+        "Gerken",
+        "Girshick",
+        "Giscard",
+        "Giscard's",
+        "Gitlab",
+        "IESDS",
+        "Jupyter",
+        "KPI's",
+        "Kaggle",
+        "Kirill",
+        "Kitware",
+        "Kubernetes",
+        "LMDB",
+        "MIZZOU",
+        "Mingyang",
+        "Murt",
+        "Nitesh",
+        "PYTHONPATH",
+        "Parallelization",
+        "Popen",
+        "Posix",
+        "Psychographics",
+        "Pylance",
+        "RESNETS",
+        "Shilliday",
+        "Slurm",
+        "Snopes",
+        "TYPECHECK",
+        "UNFOIL",
+        "VAALPP",
+        "VAALPPNOVAE",
+        "Vandelay",
+        "Vanter",
+        "WLOG",
+        "WORKDIR",
+        "XVIEWCOCO",
+        "Xview",
+        "Yaser",
+        "Yasir",
+        "activelearners",
         "algo",
         "algos",
         "altron",
-        "Amruta",
         "anns",
-        "AOM's",
         "aomsdk",
-        "API's",
         "arange",
-        "ARPU",
-        "Arslan",
         "artigraph",
         "astrazeneca",
         "astype",
         "asynch",
         "autopep",
-        "BAIR",
-        "Barreleye",
         "bbox",
         "bboxes",
-        "Bcrypt",
         "betavae",
         "biamby",
         "biontech",
-        "Bjoern's",
         "blackbox",
-        "Blazek",
         "bufsize",
         "bvaeloc",
-        "CAGR",
-        "CAMELCASE",
         "celeba",
         "chmod",
         "cifar",
@@ -114,7 +165,6 @@
         "cofounders",
         "coldstart",
         "conda",
-        "Conv",
         "convd",
         "convolutional",
         "cookiecutter",
@@ -123,11 +173,6 @@
         "ctdet",
         "cuda",
         "cudnn",
-        "CVPR",
-        "Cyprien",
-        "DARPA",
-        "DARPA’s",
-        "DASHIFIED",
         "datacenter",
         "datalake",
         "datapoints",
@@ -137,11 +182,8 @@
         "deepfake",
         "deepfakes",
         "deepfillv",
-        "Delp",
         "deque",
         "detectron",
-        "Dets",
-        "DIDAN",
         "discriminatorzdim",
         "dists",
         "dlib",
@@ -151,7 +193,6 @@
         "dotenv",
         "dtype",
         "ebextensions",
-        "EBITDA",
         "edgeconnect",
         "elasaticbeanstalk",
         "envs",
@@ -160,27 +201,19 @@
         "evigraph",
         "evigraphs",
         "facemask",
-        "Fanalyze",
         "finetune",
         "fsdet",
         "fvcore",
         "gbiamby",
         "geospatial",
-        "Gerken",
         "getenv",
         "getpgid",
-        "Girshick",
-        "Giscard",
-        "Giscard's",
-        "Gitlab",
-        "GPU's",
         "gpus",
         "graceluo",
         "groupby",
         "hackathon",
         "heatmap",
         "heatmaps",
-        "IESDS",
         "iloc",
         "imageio",
         "imgs",
@@ -199,22 +232,15 @@
         "iterrows",
         "itertools",
         "jaccard",
-        "Jupyter",
-        "Kaggle",
         "kaiming",
         "kcenter",
         "kcentergreedy",
         "kfold",
         "killpg",
-        "Kirill",
-        "Kitware",
         "kmeans",
-        "KPI's",
         "kubectl",
-        "Kubernetes",
         "laielli",
         "leaderboard",
-        "LMDB",
         "loeffler",
         "lvis",
         "manip",
@@ -223,21 +249,17 @@
         "maxormin",
         "medifor",
         "microservice",
-        "Mingyang",
         "minikube",
         "minival",
-        "MIZZOU",
         "mkdir",
         "mmbt",
         "mobilenetv",
         "moco",
         "moderna",
-        "Murt",
         "nargs",
         "ndarray",
         "nepochs",
         "neuropaths",
-        "Nitesh",
         "noqa",
         "norecursedirs",
         "numpy",
@@ -249,29 +271,23 @@
         "orgs",
         "owncloud",
         "panopticapi",
-        "Parallelization",
         "pdf's",
-        "Popen",
-        "Posix",
         "preds",
         "pretrained",
         "probs",
         "protobuf",
         "psutil",
-        "Psychographics",
         "puppeteering",
         "pyarrow",
         "pycache",
         "pycocotools",
         "pydocstyle",
         "pydoctest",
-        "Pylance",
         "pylint",
         "pylintrc",
         "pypi",
         "pytest",
         "pythonhosted",
-        "PYTHONPATH",
         "pytorch",
         "querry",
         "randn",
@@ -285,7 +301,6 @@
         "relu",
         "repurposing",
         "resnet",
-        "RESNETS",
         "rmtree",
         "roibatch",
         "rpartition",
@@ -297,10 +312,7 @@
         "semaforprogram",
         "serializable",
         "setuptools",
-        "Shilliday",
         "shutil",
-        "Slurm",
-        "Snopes",
         "sqlalchemy",
         "submodule",
         "subscore",
@@ -319,33 +331,21 @@
         "trainval",
         "trainvalno",
         "twosix",
-        "TYPECHECK",
         "unchipped",
-        "UNFOIL",
         "unsequestered",
         "vaallocb",
-        "VAALPP",
-        "VAALPPNOVAE",
         "vaeloc",
         "valminusminival",
-        "Vandelay",
-        "Vanter",
         "venv",
         "vggoriginal",
         "visdrone",
         "visualnews",
         "vscode's",
         "wandb",
-        "WLOG",
-        "WORKDIR",
         "xrange",
-        "Xview",
-        "XVIEWCOCO",
         "xyxy",
         "yacs",
         "yaml's",
-        "Yaser",
-        "Yasir",
         "yolo",
         "yolov",
         "zfill"
@@ -368,27 +368,27 @@
     },
     "files.autoSave": "afterDelay",
     "files.exclude": {
-        "**/*.pyc": true,
+        "**/__pycache__/**": true,
         "**/.DS_Store": true,
         "**/.git": true,
         "**/.pytest_cache": true,
-        "**/XDG_CACHE_HOME": true,
-        "**/__pycache__/**": true
+        "**/*.pyc": true,
+        "**/XDG_CACHE_HOME": true
     },
     "files.watcherExclude": {
-        "**/*.pyc": true,
+        "**/__pycache__/**": true,
         "**/.DS_Store": true,
         "**/.git": true,
         "**/.gitbak": true,
         "**/.pytest_cache/**": true,
-        "**/__pycache__/**": true,
+        "**/*.pyc": true,
         "**/chipped_500/**": true,
+        "**/coco_chipped/**": true,
+        "**/coco_vanilla/**": true,
         "**/coco/**/*.txt": true,
         "**/coco/annotations/**": true,
         "**/coco/images/**": true,
         "**/coco/labels/**": true,
-        "**/coco_chipped/**": true,
-        "**/coco_vanilla/**": true,
         "**/data/**": true,
         "**/data/Xview/**": true,
         "**/datasets/**": true,
@@ -522,6 +522,7 @@
     "vsicons.presets.jsonOfficial": true,
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "window.restoreWindows": "all",
+    "window.zoomLevel": 3,
     "workbench.activityBar.visible": true,
     "workbench.colorCustomizations": {
         "activityBar.activeBorder": "#2979FF",
@@ -563,11 +564,5 @@
     "workbench.iconTheme": "eq-material-theme-icons-light",
     "workbench.settings.openDefaultKeybindings": true,
     "workbench.statusBar.feedback.visible": false,
-    "workbench.tree.indent": 15,
-    "[yaml]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "window.zoomLevel": 1,
-    "notebook.cellToolbarVisibility": "hover",
-    "notebook.output.textLineLimit": 120
+    "workbench.tree.indent": 15
 }
