Split bash prompt and bash completion stuff into separate files

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -184,6 +184,7 @@
         "deepfillv",
         "deque",
         "detectron",
+        "direnv",
         "discriminatorzdim",
         "dists",
         "dlib",
@@ -214,6 +215,7 @@
         "hackathon",
         "heatmap",
         "heatmaps",
+        "ifeq",
         "iloc",
         "imageio",
         "imgs",
@@ -238,6 +240,7 @@
         "kfold",
         "killpg",
         "kmeans",
+        "kube",
         "kubectl",
         "laielli",
         "leaderboard",
@@ -274,6 +277,7 @@
         "pdf's",
         "preds",
         "pretrained",
+        "printf",
         "probs",
         "protobuf",
         "psutil",
@@ -321,6 +325,7 @@
         "termcolor",
         "timeit",
         "timm",
+        "tini",
         "tobytes",
         "todo's",
         "tolist",
@@ -522,6 +527,7 @@
     "vsicons.presets.jsonOfficial": true,
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "window.restoreWindows": "all",
+    "window.zoomLevel": 2,
     "workbench.activityBar.visible": true,
     "workbench.colorCustomizations": {
         "activityBar.activeBorder": "#2979FF",
