--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -353,6 +353,7 @@
         "yaml's",
         "yolo",
         "yolov",
+        "yubikey",
         "zfill"
     ],
     "diffEditor.ignoreTrimWhitespace": false,
@@ -527,7 +528,7 @@
     "vsicons.presets.jsonOfficial": true,
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "window.restoreWindows": "all",
-    "window.zoomLevel": 2,
+    "window.zoomLevel": 1,
     "workbench.activityBar.visible": true,
     "workbench.colorCustomizations": {
         "activityBar.activeBorder": "#2979FF",
@@ -580,5 +581,6 @@
     "git.showPushSuccessNotification": true,
     "git.supportCancellation": true,
     "git.untrackedChanges": "separate",
-    "cSpell.allowCompoundWords": true
+    "cSpell.allowCompoundWords": true,
+    "git.confirmSync": false
 }
