--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -333,6 +333,7 @@
         "unchipped",
         "UNFOIL",
         "unsequestered",
+        "uritools",
         "vaallocb",
         "VAALPP",
         "VAALPPNOVAE",
@@ -533,7 +534,6 @@
     "vsicons.presets.jsonOfficial": true,
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "window.restoreWindows": "all",
-    "window.zoomLevel": 1,
     "workbench.activityBar.visible": true,
     "workbench.colorCustomizations": {
         "activityBar.activeBorder": "#2979FF",
@@ -587,5 +587,6 @@
     "git.supportCancellation": true,
     "git.untrackedChanges": "separate",
     "cSpell.allowCompoundWords": true,
-    "git.confirmSync": false
+    "git.confirmSync": false,
+    "window.zoomLevel": 1
 }
