Sync edits, minor. Enable Hinterland nbextension

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -245,6 +245,7 @@
         "nepochs",
         "neuropaths",
         "Nitesh",
+        "nltk",
         "noqa",
         "norecursedirs",
         "numpy",
