--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -589,5 +589,7 @@
     "git.untrackedChanges": "separate",
     "cSpell.allowCompoundWords": true,
     "git.confirmSync": false,
+    "files.legacyWatcher": "off",
+    "todo-tree.general.enableFileWatcher": true,
     "window.zoomLevel": 1
 }
