--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,10 @@
         "titleBar.activeBackground": "#909ca7",
         "titleBar.activeForeground": "#15202b",
         "titleBar.inactiveBackground": "#909ca799",
-        "titleBar.inactiveForeground": "#15202b99"
+        "titleBar.inactiveForeground": "#15202b99",
+        "sash.hoverBorder": "#acb5be",
+        "statusBarItem.remoteBackground": "#909ca7",
+        "statusBarItem.remoteForeground": "#15202b"
     },
     "peacock.color": "#909ca7",
 }
