--- a/stow_packages/git/.gitconfig
+++ b/stow_packages/git/.gitconfig
@@ -171,3 +171,9 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+
+[http]
+	postBuffer = 157286400
+
+[init]
+	defaultBranch = main
