--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,24 +51,25 @@
         "latex",
         "plaintext"
     ],
-    "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#acb5be",
-        "activityBar.activeBorder": "#bf4080",
-        "activityBar.background": "#acb5be",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#bf4080",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.background": "#909ca7",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#748390",
-        "titleBar.activeBackground": "#909ca7",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#909ca799",
-        "titleBar.inactiveForeground": "#15202b99",
-        "sash.hoverBorder": "#acb5be",
-        "statusBarItem.remoteBackground": "#909ca7",
-        "statusBarItem.remoteForeground": "#15202b"
-    },
     "peacock.color": "#909ca7",
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#1f6fd0",
+        "activityBar.activeBorder": "#ee90bb",
+        "activityBar.background": "#1f6fd0",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#ee90bb",
+        "activityBarBadge.foreground": "#15202b",
+        "sash.hoverBorder": "#1f6fd0",
+        "statusBar.background": "#1857a4",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#1f6fd0",
+        "statusBarItem.remoteBackground": "#1857a4",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#1857a4",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#1857a499",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.remoteColor": "#1857a4",
 }
