Update bair_shared to point to one in home

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -109,6 +109,7 @@
         "ckpt",
         "cmdline",
         "cmds",
+        "COCOB",
         "cocobetter",
         "cocoeval",
         "cofounders",
@@ -154,6 +155,7 @@
         "ebextensions",
         "EBITDA",
         "edgeconnect",
+        "efficientdet",
         "elasaticbeanstalk",
         "envs",
         "errored",
