--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -115,6 +115,7 @@
         "cofounders",
         "coldstart",
         "conda",
+        "consts",
         "Conv",
         "convd",
         "convolutional",
@@ -574,7 +575,6 @@
     "workbench.editor.enablePreview": true,
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.editor.revealIfOpen": true,
-    "workbench.editor.tabSizing": "shrink",
     "workbench.editor.untitled.hint": "hidden",
     "workbench.editor.wrapTabs": true,
     "workbench.editorAssociations": {
@@ -599,5 +599,6 @@
     "files.legacyWatcher": "off",
     "todo-tree.general.enableFileWatcher": true,
     "editor.guides.bracketPairs": "active",
-    "editor.bracketPairColorization.enabled": true
+    "editor.bracketPairColorization.enabled": true,
+    "window.zoomLevel": 3
 }
