--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -490,8 +490,9 @@
     "python.analysis.completeFunctionParens": true,
     "python.analysis.diagnosticMode": "workspace",
     "python.analysis.memory.keepLibraryAst": true,
+    "python.analysis.indexing": true,
     "python.analysis.symbolsHierarchyDepthLimit": 15,
-    "python.analysis.typeCheckingMode": "basic",
+    "python.analysis.typeCheckingMode": "strict",
     "python.autoComplete.addBrackets": true,
     "python.dataScience.allowUnauthorizedRemoteConnection": true,
     "python.dataScience.askForKernelRestart": false,
@@ -600,5 +601,5 @@
     "todo-tree.general.enableFileWatcher": true,
     "editor.guides.bracketPairs": "active",
     "editor.bracketPairColorization.enabled": true,
-    "window.zoomLevel": 3
+    "window.zoomLevel": 1
 }
