--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -601,5 +601,7 @@
     "todo-tree.general.enableFileWatcher": true,
     "editor.guides.bracketPairs": "active",
     "editor.bracketPairColorization.enabled": true,
-    "window.zoomLevel": 1
+    "window.zoomLevel": 1,
+    "terminal.integrated.enableShellIntegration": true,
+    "shellcheck.useWorkspaceRootAsCwd": true
 }
