--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -224,6 +224,7 @@
         "leaderboard",
         "LMDB",
         "loeffler",
+        "logit",
         "lvis",
         "manip",
         "maskrcnn",
@@ -238,6 +239,7 @@
         "MIZZOU",
         "mkdir",
         "mmbt",
+        "mmdet",
         "mobilenetv",
         "moco",
         "moderna",
@@ -337,6 +339,7 @@
         "trainvalno",
         "twosix",
         "TYPECHECK",
+        "ultralytics",
         "unchipped",
         "UNFOIL",
         "unsequestered",
@@ -601,7 +604,5 @@
     "todo-tree.general.enableFileWatcher": true,
     "editor.guides.bracketPairs": "active",
     "editor.bracketPairColorization.enabled": true,
-    "window.zoomLevel": 1,
-    "terminal.integrated.enableShellIntegration": true,
-    "shellcheck.useWorkspaceRootAsCwd": true
+    "terminal.integrated.enableShellIntegration": true
 }
