add map_cthu function

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -328,6 +328,7 @@
         "subscore",
         "subscores",
         "symlink",
+        "tenumerate",
         "termcolor",
         "timeit",
         "timm",
@@ -343,6 +344,7 @@
         "trainvalno",
         "twosix",
         "TYPECHECK",
+        "tzip",
         "ultralytics",
         "unchipped",
         "UNFOIL",
@@ -365,6 +367,8 @@
         "webdavs",
         "WLOG",
         "WORKDIR",
+        "xmax",
+        "xmin",
         "xrange",
         "Xview",
         "XVIEWCOCO",
@@ -373,6 +377,8 @@
         "yaml's",
         "Yaser",
         "Yasir",
+        "ymax",
+        "ymin",
         "yolo",
         "yolov",
         "yubikey",
@@ -541,6 +547,7 @@
     "security.workspace.trust.untrustedFiles": "open",
     "sync.forceUpload": true,
     "sync.gist": "84d1a6b5297e9f9834c1c83473a87e07",
+    "terminal.integrated.automationShell.linux": "bash",
     "terminal.integrated.cursorBlinking": true,
     "terminal.integrated.defaultProfile.linux": "my_bash",
     "terminal.integrated.enableShellIntegration": true,
@@ -603,15 +610,15 @@
     },
     "workbench.colorTheme": "Tinacious Design",
     "workbench.editor.enablePreview": true,
-    "workbench.editor.highlightModifiedTabs": true,
     "workbench.editor.revealIfOpen": true,
     "workbench.editor.untitled.hint": "hidden",
-    "workbench.editor.wrapTabs": true,
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter-notebook"
     },
     "workbench.iconTheme": "eq-material-theme-icons-light",
     "workbench.settings.openDefaultKeybindings": true,
     "workbench.statusBar.feedback.visible": false,
-    "workbench.tree.indent": 15
+    "workbench.tree.indent": 15,
+    "workbench.editor.highlightModifiedTabs": true,
+    "window.zoomLevel": 1
 }
