--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -127,6 +127,7 @@
         "coronavirus",
         "covid",
         "ctdet",
+        "cthu",
         "cuda",
         "cudnn",
         "CVPR",
@@ -170,9 +171,11 @@
         "facemask",
         "Fanalyze",
         "finetune",
+        "framedets",
         "fsdet",
         "fvcore",
         "gbiamby",
+        "geoguessr",
         "geospatial",
         "Gerken",
         "getenv",
@@ -197,6 +200,7 @@
         "inpaint",
         "inpainted",
         "inpainting",
+        "inplace",
         "ints",
         "invariances",
         "iopath",
@@ -205,6 +209,7 @@
         "ipython",
         "iscrowd",
         "isdecimal",
+        "isin",
         "isort",
         "iterrows",
         "itertools",
@@ -249,6 +254,7 @@
         "moderna",
         "Murt",
         "nargs",
+        "nbconvert",
         "nbextension",
         "ndarray",
         "nepochs",
@@ -303,6 +309,7 @@
         "recontenxtualization",
         "recontextualization",
         "recontextualized",
+        "reindex",
         "relu",
         "repurposing",
         "resnet",
@@ -363,6 +370,7 @@
         "visdrone",
         "visualnews",
         "vscode's",
+        "vstack",
         "wandb",
         "webdav",
         "webdavs",
@@ -385,7 +393,6 @@
         "yubikey",
         "zfill"
     ],
-    "diffEditor.ignoreTrimWhitespace": false,
     "editor.bracketPairColorization.enabled": true,
     "editor.copyWithSyntaxHighlighting": false,
     "editor.cursorSmoothCaretAnimation": true,
@@ -548,12 +555,17 @@
     "security.workspace.trust.untrustedFiles": "open",
     "sync.forceUpload": true,
     "sync.gist": "84d1a6b5297e9f9834c1c83473a87e07",
-    "terminal.integrated.automationShell.linux": "my_bash",
-    // "terminal.integrated.automationProfile.linux": "my_bash",
+    // "terminal.integrated.automationShell.linux": "my_bash",
+    "terminal.integrated.automationProfile.linux": {
+        "args": [
+            "--login"
+        ],
+        "path": "bash",
+        "icon": "console"
+    },
     "terminal.integrated.cursorBlinking": true,
     "terminal.integrated.defaultProfile.linux": "my_bash",
     "terminal.integrated.enableBell": true,
-    "terminal.integrated.enableShellIntegration": true,
     "terminal.integrated.experimentalRefreshOnResume": true,
     "terminal.integrated.inheritEnv": true,
     "terminal.integrated.persistentSessionScrollback": 1000000,
@@ -587,7 +599,6 @@
     "vsicons.presets.jsonOfficial": true,
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "window.restoreWindows": "all",
-    "window.zoomLevel": 1,
     "workbench.activityBar.visible": true,
     "workbench.colorCustomizations": {
         "activityBar.activeBorder": "#2979FF",
@@ -627,5 +638,7 @@
     "workbench.iconTheme": "eq-material-theme-icons-light",
     "workbench.settings.openDefaultKeybindings": true,
     "workbench.statusBar.feedback.visible": false,
-    "workbench.tree.indent": 15
+    "workbench.tree.indent": 15,
+    "window.zoomLevel": 2,
+    "diffEditor.ignoreTrimWhitespace": true
 }
